--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.datasource.password=padtec
 quarkus.datasource.jdbc.url=jdbc:mysql://172.21.240.1:3306/mydb
 # drop and create the database at startup (use `update` to only update the schema)
 # quarkus.hibernate-orm.database.generation=update
+# datasource configuration
